Nuevo logo y nombre APAÑA-TE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Apañador</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <title>APAÑA-TE - Soluciones Rápidas</title> <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/jpeg" href="images/logo.jpg"> </head>
 <body>
 
     <header>
         <div class="brand">
-            🚀 El Apañador
+            <img src="images/logo.jpg" alt="Logo Apaña-te" class="logo-img">
+            APAÑA-TE
         </div>
     </header>
 
     <div class="search-container">
-        <input type="text" id="searchInput" placeholder="¿Qué se te ha roto hoy? (ej. tornillo, grifo...)">
+        <input type="text" id="searchInput" placeholder="¿Qué necesitas apañar hoy? (ej. tornillo, grifo...)">
         
         <div class="category-scroll">
             <button class="cat-btn active" data-cat="all">Todas</button>
@@ -32,7 +32,7 @@
     </button>
 
     <div id="solutionsList">
-        <p style="text-align:center; color: white;">Cargando la base de conocimientos...</p>
+        <p style="text-align:center; color: white;">Cargando tus apaños...</p>
     </div>
 
     <div id="detailModal" class="modal" style="display:none;">
