--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
     <header>
         <div class="brand">
-            <img src="images/logo-icon.jpg" alt="Logo Apaña-te" class="logo-img">
+            <img src="images/logo-icon.png" alt="Logo Apaña-te" class="logo-img">
             APAÑA-TE
         </div>
     </header>
