Remove scanner button from index.html
Removed the scanner button from the search container.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,12 @@
     </header>
 
     <div class="search-container">
-        <input type="text" id="searchInput" placeholder="¿Qué necesitas apañar hoy?">
+        <div class="search-wrapper">
+            <input type="text" id="searchInput" placeholder="¿Qué necesitas apañar hoy?">
+            <button id="lensBtn" class="lens-btn" title="Escanear herramienta">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+            </button>
+        </div>
         
         <div class="category-scroll">
             <button class="cat-btn active" data-cat="all">Todas</button>
@@ -31,10 +36,6 @@
             <button class="cat-btn" data-cat="Ropa">👕 Ropa</button>
         </div>
     </div>
-
-    <button class="scanner-btn" onclick="alert('Abriendo cámara... (Simulación)')">
-        📷 Escanear Herramienta
-    </button>
 
     <div id="solutionsList">
         <p style="text-align:center; color: white;">Cargando tus apaños...</p>
