--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,9 +21,12 @@
     <div class="search-container">
         <div class="search-wrapper">
             <input type="text" id="searchInput" placeholder="¿Qué necesitas apañar hoy?">
-            <button id="lensBtn" class="lens-btn" title="Escanear herramienta">
+            
+            <button id="lensBtn" class="lens-btn" title="Escanear herramienta con IA">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
             </button>
+
+            <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;">
         </div>
         
         <div class="category-scroll">
