--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,11 +21,9 @@
     <div class="search-container">
         <div class="search-wrapper">
             <input type="text" id="searchInput" placeholder="¿Qué necesitas apañar hoy?">
-            
             <button id="lensBtn" class="lens-btn" title="Escanear herramienta con IA">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
             </button>
-
             <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;">
         </div>
         
@@ -37,6 +35,13 @@
             <button class="cat-btn" data-cat="Herramientas">🔧 Herramientas</button>
             <button class="cat-btn" data-cat="Coche">🚗 Coche</button>
             <button class="cat-btn" data-cat="Ropa">👕 Ropa</button>
+        </div>
+
+        <div class="difficulty-scroll" style="margin-top: 10px; display: flex; gap: 8px; overflow-x: auto; padding-bottom: 5px;">
+            <button class="diff-btn active" data-diff="all">Cualquiera</button>
+            <button class="diff-btn low" data-diff="Bajo">🟢 Fácil</button>
+            <button class="diff-btn med" data-diff="Medio">🟡 Medio</button>
+            <button class="diff-btn high" data-diff="Alto">🔴 Difícil</button>
         </div>
     </div>
 
