Actualizar index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,11 @@
         <p style="text-align:center; color: white;">Cargando tus apaños...</p>
     </div>
 
+    <footer class="app-footer">
+        <p>Creada por <strong class="author-name">Jesús Adolfo García García</strong></p>
+        <p class="author-role">Desarrollador de Aplicaciones</p>
+    </footer>
+
     <div id="detailModal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
