Actualizar index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,10 +49,13 @@
         <p style="text-align:center; color: white;">Cargando tus apaños...</p>
     </div>
 
-    <footer class="app-footer">
-        <p>Creada por <strong class="author-name">Jesús Adolfo García García</strong></p>
-        <p class="author-role">Desarrollador de Aplicaciones</p>
-    </footer>
+    <div class="app-footer-container">
+        <div class="author-box">
+            <p>🚀 Aplicación desarrollada por</p>
+            <p class="author-name">Jesús Adolfo García García</p>
+            <p class="author-role">Creador de Soluciones</p>
+        </div>
+    </div>
 
     <div id="detailModal" class="modal" style="display:none;">
         <div class="modal-content">
