Actualizar index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,9 +51,9 @@
 
     <div class="app-footer-container">
         <div class="author-box">
-            <p>🚀 Aplicación desarrollada por</p>
-            <p class="author-name">Jesús Adolfo García García</p>
-            <p class="author-role">Creador de Soluciones</p>
+            <p class="author-text">
+                🚀 Aplicación creada por <span class="author-name-inline">Jesús Adolfo García García</span>, desarrollador de aplicaciones.
+            </p>
         </div>
     </div>
 
